--- a/missingkids/less/header.less
+++ b/missingkids/less/header.less
@@ -402,7 +402,7 @@
 
                 &.social-icons {
                   font-size: 20px;
-                  padding-top: 2px;
+                  padding-top: 1px;
                   position: relative;
                   right: 0;
                   transition: right 0.1s ease-in;
@@ -412,7 +412,7 @@
                     position: static;
                   }
                   @media (min-width: @screen-md) {
-                    padding-top: 5px;
+                    padding-top: 4px;
                     position: absolute;
                     right: 0;
                   }
